--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_create') }}">Create</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_create_product') }}">Create</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_category') }}">Categories</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_product') }}">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_login') }}">Login</a>
