--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -10,6 +10,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <div class="card-header">
+                        {% include 'image/image_or_not_image.html.twig' with {object:product} %}
                     </div>
                     <div class="card-body">
                         <div class="card-title d-flex justify-content-between">
