--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -9,6 +9,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <div class="card-header">
+                        {% include 'image/image_or_not_image.html.twig' with {object:product} %}
                     </div>
                     <div class="card-body">
                         <div class="card-title d-flex justify-content-between">
@@ -22,9 +23,10 @@
                             <div>Ajouté le {{ product.createdAt|date("d/m/Y H:i") }}</div>
                         </small>
                         <div class="d-flex justify-content-center align-items-center">
-                            <a href="{{ path("app_product") }}" class="btn btn-primary mt-3">Retour</a>
-                            <a href="{{ path("app_delete_product", {id:product.id}) }}" class="btn btn-danger mt-3">Supprimer</a>
-                            <a href="{{ path("app_edit_product", {id:product.id}) }}" class="btn btn-warning mt-3">Editer</a>
+                            <a href="{{ path("app_product") }}" class="btn btn-primary mt-3 mx-2">Retour</a>
+                            <a href="{{ path("app_delete_product", {id:product.id}) }}" class="btn btn-danger mt-3 mx-2">Supprimer</a>
+                            <a href="{{ path("app_edit_product", {id:product.id}) }}" class="btn btn-warning mt-3 mx-2">Editer</a>
+                            <a href="{{ path('product_image', {id:product.id}) }}" class="btn btn-light mt-3 mx-2">Image</a>
                         </div>
                     </div>
                 </div>
