--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -1,16 +1,22 @@
 <nav class="navbar navbar-expand-lg bg-danger">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Shop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse " id="navbarNav">
+            <ul class="navbar-nav ">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('app_create_product') }}">Create</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_product') }}">Products</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_product_admin') }}">Admin</a>
+                </li>
+
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_product') }}">User</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_login') }}">Login</a>
@@ -20,6 +26,22 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"  href="{{ path('app_register') }}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="{{ path('app_profile') }}">Profile</a>
+                </li>
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link">{{ app.user.email }}</a>
+                    </li>
+                {% else%}
+                    <li class="nav-item">
+                        <a class="nav-link">No user connected</a>
+                    </li>
+
+                {% endif %}
+                <li class="nav-item">
+                    <a class=" btn btn-primary"  href="{{ path("app_cart") }}">Panier ({{ cart_global.getCount }})</a>
                 </li>
             </ul>
         </div>
