--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -4,10 +4,14 @@
 
 
 {% block body %}
-    <div class="my-4"><h1>Page product</h1></div>
+    <div>
+        <a href="{{ path("app_product") }}" class="btn btn-primary mt-5 ">Retour</a>
+    </div>
+    <div class="text-center mb-3" ><h1>Page produit</h1></div>
+
     <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card h-100">
+            <div class="d-flex flex-column justify-content-center align-items-center mb-3">
+                <div class="card h-100 col-6">
                     <div class="card-header">
                         {% include 'image/image_or_not_image.html.twig' with {object:product} %}
                     </div>
@@ -16,21 +20,42 @@
                             <h5>{{ product.name }}</h5>
                         </div>
                         <p class="card-text">{{ product.description }}</p>
+                        <p class="card-text">{{ product.price }}</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <small class="text-muted mt-3 d-flex flex-column">
 
                             <div>Ajouté le {{ product.createdAt|date("d/m/Y H:i") }}</div>
                         </small>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="{{ path("app_product") }}" class="btn btn-primary mt-3 mx-2">Retour</a>
-                            <a href="{{ path("app_delete_product", {id:product.id}) }}" class="btn btn-danger mt-3 mx-2">Supprimer</a>
-                            <a href="{{ path("app_edit_product", {id:product.id}) }}" class="btn btn-warning mt-3 mx-2">Editer</a>
-                            <a href="{{ path('product_image', {id:product.id}) }}" class="btn btn-light mt-3 mx-2">Image</a>
-                        </div>
+                        <a href="{{ path("app_cart_add", {id:product.id, quantity:1}) }}" class="btn btn-primary">Add to cart</a>
+
                     </div>
                 </div>
+
+
             </div>
+        <div class="container d-flex flex-column col-6 justify-content-center  my-3">
+            {{ form_start(form, {attr: {action:path("app_comment_create", {id:product.id})}}) }}
+
+
+            {{ form_widget(form.content) }}
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-success ml-2">Commenter</button>
+            </div>
+            {{ form_end(form) }}
+        </div>
+
+        <div class="d-flex flex-column row-gap-5 align-items-center mb-3">
+        {% for comment in product.comments|reverse %}
+            <div class="card d-flex  justify-content-center border-dark col-6 mb-1">
+                <div>{{ comment.content }}</div>
+                <div class="">{{ comment.createdAt|date("d/m/Y H:i") }}</div>
+
+            </div>
+
+        {% endfor %}
+        </div>
+
     </div>
 
 {% endblock %}
