--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -3,14 +3,17 @@
 
 
 {% block body %}
+<div class="container mt-3">
+    <div class="row justify-content-center">
+            <h3 class="text-center mb-4">Panier de {{ app.user.email }}</h3>
 
-    <table class="table">
+    <table class="table mt-5" style="line-height: 3rem;">
         <thead>
         <tr>
-            <th scope="col">Product</th>
-            <th scope="col">Price</th>
+            <th scope="col">Produit</th>
+            <th scope="col">Prix</th>
             <th scope="col">Quantité</th>
-            <th scope="col">Subtotal</th>
+            <th scope="col">Sous-total</th>
             <th scope="col">Action</th>
         </tr>
         </thead>
@@ -20,24 +23,26 @@
             <tr>
                 <th scope="row">{{ item.product.name }}</th>
                 <td>{{ item.product.price }} €</td>
-                <td>{{ item.quantity }}</td>
+                <td class="">
+                    <a href="{{ path('app_cart_remove', {id:item.product.id}) }}" class="btn btn-warning me-2"><i class="bi bi-dash"></i></a>
+                    {{ item.quantity }}
+                    <a href="{{ path('app_cart_addfromcart', {id:item.product.id, quantity:1}) }}" class="btn btn-success ms-2"><i class="bi bi-plus"></i></a>
+                </td>
                 <td>{{ item.product.price * item.quantity}} €</td>
                 <td>
-                    <a href="{{ path('app_cart_remove', {id:item.product.id}) }}" class="btn btn-warning">-</a>
-                    <a href="{{ path('app_cart_addfromcart', {id:item.product.id, quantity:1}) }}" class="btn btn-success">+</a>
-                    <a href="{{ path('app_cart_remove_row', {id:item.product.id}) }}" class="btn btn-danger">X</a>
+
+                    <a href="{{ path('app_cart_remove_row', {id:item.product.id}) }}" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
                 </td>
             </tr>
             {% endfor %}
 
-            <tr class="">
+            <tr class="mt-3">
 
-                <td><a href="{{ path('app_empty_cart') }}" class="btn btn-danger">Empty Cart</a></td>
+                <td><a href="{{ path('app_empty_cart') }}" class="btn btn-danger">Vider panier</a></td>
                 <td></td>
                 <td></td>
-                <td>Total : {{ total }} €</td>
-                <td><strong></strong></td>
-                <td><a href="{{ path('app_selection') }}" class="btn btn-success">Valider</a></td>
+                <td><strong>Total</strong> : {{ total }} €</td>
+                <td><a href="{{ path('app_selection') }}" class="btn btn-success">Valider <i class="bi bi-bag-check"></i></a></td>
 
             </tr>
 
