--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,37 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Products{% endblock %}
-
+{% block title %}Produits{% endblock %}
 
 {% block body %}
-    <div class="my-4"><h1>Tous les products</h1></div>
-    <div class="row">
-        {% for product in products|reverse %}
-            <div class="col-md-4 mb-4">
-                <div class="card h-100">
-                    <div class="card-header">
-                        {% include 'image/image_or_not_image.html.twig' with {object:product} %}
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title d-flex justify-content-between">
-                            <h5>{{ product.name }}</h5>
+    <div class="container mt-5">
+        <h1 class="text-center mb-3">Tous les produits</h1>
+        <div class="row">
+            {% for product in products %}
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="position-relative">
+                            {% include "image/image_or_not_image.html.twig" with {object:product} %}
                         </div>
-                        <p class="card-text">{{ product.description }}</p>
-                        <p class="card-text">{{ product.price }} €</p>
-
-                    </div>
-                    <div class="card-footer d-flex justify-content-between">
-                        <small class="text-muted mt-3 d-flex flex-column">
-                            <div>Ajouté le {{ product.createdAt|date("d/m/Y H:i") }}</div>
-                        </small>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <a href="{{ path("app_cart_add", {id:product.id, quantity: 1}) }}" class="btn btn-primary">Add to cart</a>
-                            <a href="{{ path("app_show", {id: product.id}) }}" class="btn btn-primary mt-3">Voir</a>
+                        <div class="card-body text-center">
+                            <h5 class="card-title mb-3">{{ product.name }}</h5>
+                            <p class="card-text text-muted">{{ product.description }}</p>
+                            <h6 class="card-subtitle mb-3 text-primary">{{ product.price }} €</h6>
+                        </div>
+                        <div class="card-footer border-top-0">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                    <small class="text-muted">Ajouté le {{ product.createdAt|date("d/m/Y") }}</small>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <a href="{{ path("app_cart_add", {id:product.id, quantity: 1}) }}" class="btn btn-primary btn-sm">Ajouter au panier</a>
+                                    <a href="{{ path("app_show", {id: product.id}) }}" class="btn btn-outline-primary btn-sm ms-2">Voir</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
-
 {% endblock %}
+
