--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -1,48 +1,48 @@
-<nav class="navbar navbar-expand-lg bg-danger">
+<nav class="navbar navbar-expand-lg bg-nav ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Shop</a>
+        <a class="navbar-brand text-warning" href="#">Shop</a>
+
+        {% if app.user %}
+            {% if is_granted('ROLE_ADMIN') %}
+
+                    <a class="nav-link text-warning me-3" href="{{ path('app_create_product') }}">Ajouter</a>
+
+                    <a class="nav-link text-warning me-3" href="{{ path('app_product_admin') }}">Admin</a>
+
+                    <a href="{{ path('app_profile') }}" class="nav-link text-warning">{{ app.user.email }}</a>
+
+
+                    <a class="nav-link text-warning ms-3" href="{{ path('app_logout') }}">Logout</a>
+
+
+
+            {% elseif is_granted('ROLE_USER')  %}
+                <a href="{{ path('app_profile') }}" class="nav-link text-warning">{{ app.user.email }}</a>
+            {% endif %}
+        {% endif %}
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav ">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_create_product') }}">Create</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_product_admin') }}">Admin</a>
-                </li>
-
-
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_product') }}">User</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link"  href="{{ path('app_register') }}">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link"  href="{{ path('app_profile') }}">Profile</a>
+                    <a class="nav-link active text-warning me-2" aria-current="page" href="{{ path('app_product') }}">Produits</a>
                 </li>
                 {% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link">{{ app.user.email }}</a>
+                        <a class="btn btn-primary text-warning" href="{{ path("app_cart") }}"><i class="bi bi-bag"></i> ({{ cart_global.getCount }})</a>
                     </li>
-                {% else%}
+                {% else %}
                     <li class="nav-item">
-                        <a class="nav-link">No user connected</a>
+                        <a class="nav-link text-warning" href="{{ path('app_login') }}">Login</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link text-warning" href="{{ path('app_register') }}">Register</a>
+                    </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a class=" btn btn-primary"  href="{{ path("app_cart") }}">Panier ({{ cart_global.getCount }})</a>
-                </li>
+
+
             </ul>
         </div>
     </div>
