--- a/templates/order/selection.html.twig
+++ b/templates/order/selection.html.twig
@@ -3,6 +3,35 @@
 {% block title %}Hello OrderController!{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <h5 class="card-title">Confirmation des informations de commande</h5>
+                    </div>
+                    <div class="card-body">
+                        {{ form_start(form, {attr:{action:path('app_order_create')}}) }}
 
+                        <div class="mb-3">
+                            {{ form_row(form.billing, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.delivery, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.payment, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+
+                        <div class="text-center">
+
+                            <button type="submit" class="btn btn-success">Valider</button>
+                        </div>
+
+                        {{ form_end(form) }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
