--- a/templates/profile/address-create.html.twig
+++ b/templates/profile/address-create.html.twig
@@ -1,30 +1,45 @@
 {% extends 'base.html.twig' %}
 
-
-
 {% block body %}
-    {{ form_start(form) }}
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title text-center">Ajouter une adresse</h5>
+                    </div>
+                    <div class="card-body">
+                        {{ form_start(form) }}
 
-    <div class="mb-3">
-        {{ form_row(form.streetNumber)}}
-    </div>
-    <div class="mb-3">
-        {{ form_row(form.street)}}
-    </div>
-    <div class="mb-3">
-        {{ form_row(form.zipcode)}}
-    </div>
-    <div class="mb-3">
-        {{ form_row(form.city)}}
-    </div>
-    <div class="mb-3">
-        {{ form_row(form.phone)}}
-    </div>
-    <div class="mb-3">
-        {{ form_row(form.country)}}
-    </div>
+                        <div class="mb-3">
+                            {{ form_row(form.streetNumber, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.street, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.zipcode, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.city, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.phone, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                        <div class="mb-3">
+                            {{ form_row(form.country, {'attr': {'class': 'form-control'}}) }}
+                        </div>
 
-    <button type="submit" class="btn btn-success">{{ btnValue }}</button>
+                        <div class="text-center">
 
-    {{ form_end(form) }}
+                            <button type="submit" class="btn btn-success">{{ btnValue }}</button>
+
+                        </div>
+
+                        {{ form_end(form) }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
