--- a/templates/profile/payment-create.html.twig
+++ b/templates/profile/payment-create.html.twig
@@ -1,15 +1,30 @@
 {% extends 'base.html.twig' %}
 
-
-
 {% block body %}
-    {{ form_start(form) }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title text-center">Ajouter méthode de paiement</h5>
+                    </div>
+                    <div class="card-body">
+                        {{ form_start(form) }}
 
-    <div class="mb-3">
-        {{ form_row(form.cardNumber)}}
+                        <div class="mb-3">
+                            {{ form_row(form.cardNumber, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+
+                        <div class="text-center">
+
+                            <button type="submit" class="btn btn-success">{{ btnValue }}</button>
+
+                        </div>
+
+                        {{ form_end(form) }}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <button type="submit" class="btn btn-success">{{ btnValue }}</button>
-
-    {{ form_end(form) }}
 {% endblock %}
