front et correctifs

--- a/templates/image/image_or_not_image.html.twig
+++ b/templates/image/image_or_not_image.html.twig
@@ -10,7 +10,7 @@
                 {% for image in object.images %}
                     <div class="carousel-item {% if loop.first %}active{% endif %}">
                         <div class="position-relative">
-                            <img class="d-block w-100 img-fluid rounded-3" style="height: 300px; object-fit: cover;" src="{{ vich_uploader_asset(image) }}" alt="">
+                            <img class="d-block w-100 img-fluid rounded-3" style="height: 300px; object-fit: cover;" src="{{ vich_uploader_asset(image)|imagine_filter('vignette_product') }}" alt="">
                         </div>
                     </div>
                 {% endfor %}
@@ -27,6 +27,6 @@
 
 
 {% else %}
-    <img  class="d-block w-100 img-fluid rounded-3" style="height: 300px; object-fit: cover;" src="{{ asset('images/no_image.png') }}" alt="">
+    <img  class="d-block w-100 img-fluid rounded-3" style="height: 300px; object-fit: cover;" src="{{ asset('images/no_image.png')|imagine_filter('vignette_product') }}" alt="">
 
 {% endif %}
