--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -5,59 +5,75 @@
 
 {% block body %}
     <div>
-        <a href="{{ path("app_product") }}" class="btn btn-primary mt-5 "><i class="bi bi-arrow-left"></i>Retour</a>
+        <a href="{{ path("app_product") }}" class="btn btn-primary my-3"><i class="bi bi-arrow-left"></i>Retour</a>
     </div>
-    <div class="text-center mb-3" ><h1>Page produit</h1></div>
+    <div class="text-center mb-5"><h1>Page produit</h1></div>
 
-    <div class="row">
-            <div class="d-flex flex-column justify-content-center align-items-center mb-3">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100 border-0 shadow-sm">
-                        <div class="position-relative">
-                            {% include "image/image_or_not_image.html.twig" with {object:product} %}
+    <div class="row ">
+        <div class="col-md-6">
+            <div class="card mb-4 border-0 shadow-sm">
+                <div class="position-relative">
+                    {% include "image/image_or_not_image.html.twig" with {object:product} %}
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title mb-3">{{ product.name }}</h5>
+                    <p class="card-text text-muted">{{ product.description }}</p>
+                    <h6 class="card-subtitle mb-3 text-primary">{{ product.price }} €</h6>
+                    <h6 class="card-subtitle mb-3 text-primary">{{ product.category.name }}</h6>
+                </div>
+                <div class="card-footer border-top-0">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                            <small class="text-muted">Ajouté le {{ product.createdAt|date("d/m/Y") }}</small>
                         </div>
-                        <div class="card-body text-center">
-                            <h5 class="card-title mb-3">{{ product.name }}</h5>
-                            <p class="card-text text-muted">{{ product.description }}</p>
-                            <h6 class="card-subtitle mb-3 text-primary">{{ product.price }} €</h6>
-                        </div>
-                        <div class="card-footer  border-top-0">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <small class="text-muted">Ajouté le {{ product.createdAt|date("d/m/Y") }}</small>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <a href="{{ path("app_cart_add", {id:product.id, quantity: 1}) }}" class="btn btn-primary btn-sm">Ajouter au panier</a>
-                                </div>
-                            </div>
+                        <div class="d-flex align-items-center">
+                            <a href="{{ path("app_cart_add", {id:product.id, quantity: 1}) }}" class="btn btn-primary btn-sm">Ajouter au panier</a>
                         </div>
                     </div>
                 </div>
-
-
             </div>
-        <div class="container d-flex flex-column col-6 justify-content-center  my-3">
-            {{ form_start(form, {attr: {action:path("app_comment_create", {id:product.id})}}) }}
+            {% if app.user %}
 
+                {{ form_start(form, {attr: {action:path("app_comment_create", {id:product.id})}}) }}
+                <div class="d-flex mb-5">
+                    {{ form_widget(form.content, {'attr': {'class': 'form-control flex-grow-1 ', 'rows': 1, 'placeholder': 'Ajouter un commentaire...' }}) }}
+                    <button type="submit" class="btn btn-success ml-2">Commenter</button>
+                    {{ form_end(form) }}
+                </div>
 
-            {{ form_widget(form.content) }}
-            <div class="d-flex justify-content-end">
-                <button type="submit" class="btn btn-success ml-2">Commenter</button>
-            </div>
-            {{ form_end(form) }}
+            {% endif %}
         </div>
 
-        <div class="d-flex flex-column row-gap-5 align-items-center mb-3">
-        {% for comment in product.comments|reverse %}
-            <div class="card d-flex  justify-content-center border-dark col-6 mb-1">
-                <div>{{ comment.content }}</div>
-                <div class="">{{ comment.createdAt|date("d/m/Y H:i") }}</div>
+        <div class="col-md-6">
+            <div class="container d-flex flex-column justify-content-between my-3">
+                <div class="d-flex flex-column">
+                    {% for comment in product.comments|reverse %}
+                        <div class="card mb-4">
+                            <div class="card-body d-flex justify-content-between">
+                                <div class="card-text">{{ comment.content }}</div>
+                                {% if app.user == comment.author or is_granted('ROLE_ADMIN')  %}
+                                <div class="d-flex">
+                                    <a href="{{ path("edit_comment",{id:comment.id}) }}"><i class="bi bi-pencil fs-5 me-3"></i></a>
+                                    <a href="{{ path("delete_comment",{id:comment.id}) }}"><i class="bi bi-trash3 fs-5"></i></a>
 
+                                </div>
+                                {% endif %}
+                            </div>
+                            <div class="card-footer text-muted d-flex justify-content-between ">
+                                <div>
+                                    {{ comment.createdAt|date("d/m/Y H:i") }}
+                                </div>
+                                <div>
+                                    {{ comment.author.email }}
+                                </div>
+
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
-
-        {% endfor %}
         </div>
-
     </div>
+
 
 {% endblock %}
