--- a/templates/product/show_admin.html.twig
+++ b/templates/product/show_admin.html.twig
@@ -27,7 +27,7 @@
                     <div class="d-flex flex-wrap" >
                         {% for image in product.images %}
                             <a class="me-3 mb-3 btn btn-danger" href="{{ path("delete_product_image", {id:image.id}) }}">
-                                <img class="d-block img-fluid rounded-3" style="width: 70px; height:auto; object-fit: cover;" src="{{ vich_uploader_asset(image) }}" alt="">
+                                <img class="d-block img-fluid rounded-3" style="width: 85px; height:auto; object-fit: cover;" src="{{ vich_uploader_asset(image)|imagine_filter('vignette_admin') }}" alt="">
                             </a>
                         {% endfor %}
                     </div>
