--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -5,8 +5,6 @@
         {% if app.user %}
             {% if is_granted('ROLE_ADMIN') %}
 
-                    <a class="nav-link text-warning me-3" href="{{ path('app_create_product') }}">Ajouter</a>
-
                     <a class="nav-link text-warning me-3" href="{{ path('app_product_admin') }}">Admin</a>
 
                     <a href="{{ path('app_profile') }}" class="nav-link text-warning">{{ app.user.email }}</a>
@@ -18,6 +16,7 @@
 
             {% elseif is_granted('ROLE_USER')  %}
                 <a href="{{ path('app_profile') }}" class="nav-link text-warning">{{ app.user.email }}</a>
+                <a class="nav-link text-warning ms-3" href="{{ path('app_logout') }}">Logout</a>
             {% endif %}
         {% endif %}
 
@@ -26,8 +25,21 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
+                {% if app.user %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+
+                                <a class="nav-link text-warning me-3" href="{{ path('app_create_product') }}">Ajouter</a>
+                            </li>
+                            <li class="nav-item">
+
+                                <a class="nav-link text-warning me-3" href="{{ path('app_category') }}">Catégories</a>
+                            </li>
+
+                    {% endif %}
+                {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link active text-warning me-2" aria-current="page" href="{{ path('app_product') }}">Produits</a>
+                    <a class="nav-link active text-warning me-3" aria-current="page" href="{{ path('app_product') }}">Produits</a>
                 </li>
                 {% if app.user %}
                     <li class="nav-item">
