--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -19,6 +19,11 @@
                     {{ form_row(form.price, {'attr': {'class': 'form-control'}}) }}
                 </div>
 
+                <div class="mb-3">
+
+                    {{ form_row(form.category, {'attr': {'class': 'form-control', 'rows': 8}}) }}
+                </div>
+
                 <div class="text-center">
 
                     <button type="submit" class="btn btn-success">{{ btnValue }}</button>
