--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -4,9 +4,27 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="text-center mb-3">Tous les produits</h1>
+        <div class="d-flex justify-content-between mb-3">
+            <h1 class="text-center mb-3">Tous les produits</h1>
+
+            <form action="{{ path('app_product') }}" method="GET">
+                <div class="d-flex mr-2">
+                    <select name="category" id="category" class="form-control">
+                        <option value="">Toutes les catégories</option>
+                        {% for category in categories %}
+                            <option value="{{ category.id }}">{{ category.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <button type="submit" class="btn btn-primary">Filtrer</button>
+                </div>
+
+            </form>
+        </div>
+
+
+
         <div class="row">
-            {% for product in products %}
+            {% for product in products|reverse %}
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="position-relative">
@@ -16,6 +34,8 @@
                             <h5 class="card-title mb-3">{{ product.name }}</h5>
                             <p class="card-text text-muted">{{ product.description }}</p>
                             <h6 class="card-subtitle mb-3 text-primary">{{ product.price }} €</h6>
+                            <h6 class="card-subtitle mb-3 text-primary">Catégorie : {{ product.category.name }}</h6>
+
                         </div>
                         <div class="card-footer border-top-0">
                             <div class="d-flex justify-content-between align-items-center">
