--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -20,6 +20,8 @@
                     <p class="card-text text-muted">{{ product.description }}</p>
                     <h6 class="card-subtitle mb-3 text-primary">{{ product.price }} €</h6>
                     <h6 class="card-subtitle mb-3 text-primary">{{ product.category.name }}</h6>
+                    <h6 class="card-subtitle mb-3 text-primary">Note : {{ product.average }}</h6>
+
                 </div>
                 <div class="card-footer border-top-0">
                     <div class="d-flex justify-content-between align-items-center">
@@ -41,12 +43,35 @@
                     {{ form_end(form) }}
                 </div>
 
+
+                {{ form_start(formMark, {attr: {action:path("app_mark", {id:product.id})}}) }}
+                <div class="d-flex mb-5">
+                    {{ form_widget(formMark.number, {'attr': {'class': 'form-control flex-grow-1 ', 'rows': 1, 'placeholder': 'Ajouter une note entre 0 et 5...' }}) }}
+                    <button type="submit" class="btn btn-success ml-2">Noter</button>
+                    {{ form_end(formMark) }}
+                </div>
+
+
+
             {% endif %}
         </div>
 
         <div class="col-md-6">
             <div class="container d-flex flex-column justify-content-between my-3">
-                <div class="d-flex flex-column">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Ma note :
+
+                            {% if app.user.marks is not empty %}
+                                {% for mark in app.user.marks %}
+                                {{ mark.number }}/5
+
+                                {% endfor %}
+                            {% endif %}
+                        </h5>
+                    </div>
+                </div>
+
                     {% for comment in product.comments|reverse %}
                         <div class="card mb-4">
                             <div class="card-body d-flex justify-content-between">
